# orcid-to-bibtex

./: .gitignore  LICENSE  README.md  orcid-to-bibtex.py  pyproject.toml
