[tool.poetry]
name = "orcid-to-bibtex"
version = "0.1.0"
description = "A command line tool to convert an individual's ORCID Works to BibTeX"
authors = ["Matt Pike"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
bibtexparser = "^1.2.0"
yake = {git = "https://github.com/LIAAD/yake"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
